parser/internal/parser/painless_parser.go
// Code generated from PainlessParser.g4 by ANTLR 4.7.1. DO NOT EDIT.

package parser // PainlessParser

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "", "", "'{'", "'}'", "'['", "']'", "'('", "')'", "'.'", "'?.'", "','",
	"';'", "'if'", "'in'", "'else'", "'while'", "'do'", "'for'", "'continue'",
	"'break'", "'return'", "'new'", "'try'", "'catch'", "'throw'", "'this'",
	"'instanceof'", "'!'", "'~'", "'*'", "'/'", "'%'", "'+'", "'-'", "'<<'",
	"'>>'", "'>>>'", "'<'", "'<='", "'>'", "'>='", "'=='", "'==='", "'!='",
	"'!=='", "'&'", "'^'", "'|'", "'&&'", "'||'", "'?'", "':'", "'?:'", "'::'",
	"'->'", "'=~'", "'==~'", "'++'", "'--'", "'='", "'+='", "'-='", "'*='",
	"'/='", "'%='", "'&='", "'^='", "'|='", "'<<='", "'>>='", "'>>>='", "",
	"", "", "", "", "", "'true'", "'false'", "'null'",
}
var symbolicNames = []string{
	"", "WS", "COMMENT", "LBRACK", "RBRACK", "LBRACE", "RBRACE", "LP", "RP",
	"DOT", "NSDOT", "COMMA", "SEMICOLON", "IF", "IN", "ELSE", "WHILE", "DO",
	"FOR", "CONTINUE", "BREAK", "RETURN", "NEW", "TRY", "CATCH", "THROW", "THIS",
	"INSTANCEOF", "BOOLNOT", "BWNOT", "MUL", "DIV", "REM", "ADD", "SUB", "LSH",
	"RSH", "USH", "LT", "LTE", "GT", "GTE", "EQ", "EQR", "NE", "NER", "BWAND",
	"XOR", "BWOR", "BOOLAND", "BOOLOR", "COND", "COLON", "ELVIS", "REF", "ARROW",
	"FIND", "MATCH", "INCR", "DECR", "ASSIGN", "AADD", "ASUB", "AMUL", "ADIV",
	"AREM", "AAND", "AXOR", "AOR", "ALSH", "ARSH", "AUSH", "OCTAL", "HEX",
	"INTEGER", "DECIMAL", "STRING", "REGEX", "TRUE", "FALSE", "NULL", "TYPE",
	"ID", "DOTINTEGER", "DOTID",
}

var ruleNames = []string{
	"source", "function", "parameters", "statement", "rstatement", "dstatement",
	"trailer", "block", "empty", "initializer", "afterthought", "declaration",
	"decltype", "declvar", "trap", "expression", "unary", "chain", "primary",
	"postfix", "postdot", "callinvoke", "fieldaccess", "braceaccess", "stdarray",
	"initializedarray", "listinitializer", "mapinitializer", "maptoken", "arguments",
	"argument", "lambda", "lamtype", "funcref",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type PainlessParser struct {
	*antlr.BaseParser
}

func NewPainlessParser(input antlr.TokenStream) *PainlessParser {
	this := new(PainlessParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "PainlessParser.g4"

	return this
}

// PainlessParser tokens.
const (
	PainlessParserEOF        = antlr.TokenEOF
	PainlessParserWS         = 1
	PainlessParserCOMMENT    = 2
	PainlessParserLBRACK     = 3
	PainlessParserRBRACK     = 4
	PainlessParserLBRACE     = 5
	PainlessParserRBRACE     = 6
	PainlessParserLP         = 7
	PainlessParserRP         = 8
	PainlessParserDOT        = 9
	PainlessParserNSDOT      = 10
	PainlessParserCOMMA      = 11
	PainlessParserSEMICOLON  = 12
	PainlessParserIF         = 13
	PainlessParserIN         = 14
	PainlessParserELSE       = 15
	PainlessParserWHILE      = 16
	PainlessParserDO         = 17
	PainlessParserFOR        = 18
	PainlessParserCONTINUE   = 19
	PainlessParserBREAK      = 20
	PainlessParserRETURN     = 21
	PainlessParserNEW        = 22
	PainlessParserTRY        = 23
	PainlessParserCATCH      = 24
	PainlessParserTHROW      = 25
	PainlessParserTHIS       = 26
	PainlessParserINSTANCEOF = 27
	PainlessParserBOOLNOT    = 28
	PainlessParserBWNOT      = 29
	PainlessParserMUL        = 30
	PainlessParserDIV        = 31
	PainlessParserREM        = 32
	PainlessParserADD        = 33
	PainlessParserSUB        = 34
	PainlessParserLSH        = 35
	PainlessParserRSH        = 36
	PainlessParserUSH        = 37
	PainlessParserLT         = 38
	PainlessParserLTE        = 39
	PainlessParserGT         = 40
	PainlessParserGTE        = 41
	PainlessParserEQ         = 42
	PainlessParserEQR        = 43
	PainlessParserNE         = 44
	PainlessParserNER        = 45
	PainlessParserBWAND      = 46
	PainlessParserXOR        = 47
	PainlessParserBWOR       = 48
	PainlessParserBOOLAND    = 49
	PainlessParserBOOLOR     = 50
	PainlessParserCOND       = 51
	PainlessParserCOLON      = 52
	PainlessParserELVIS      = 53
	PainlessParserREF        = 54
	PainlessParserARROW      = 55
	PainlessParserFIND       = 56
	PainlessParserMATCH      = 57
	PainlessParserINCR       = 58
	PainlessParserDECR       = 59
	PainlessParserASSIGN     = 60
	PainlessParserAADD       = 61
	PainlessParserASUB       = 62
	PainlessParserAMUL       = 63
	PainlessParserADIV       = 64
	PainlessParserAREM       = 65
	PainlessParserAAND       = 66
	PainlessParserAXOR       = 67
	PainlessParserAOR        = 68
	PainlessParserALSH       = 69
	PainlessParserARSH       = 70
	PainlessParserAUSH       = 71
	PainlessParserOCTAL      = 72
	PainlessParserHEX        = 73
	PainlessParserINTEGER    = 74
	PainlessParserDECIMAL    = 75
	PainlessParserSTRING     = 76
	PainlessParserREGEX      = 77
	PainlessParserTRUE       = 78
	PainlessParserFALSE      = 79
	PainlessParserNULL       = 80
	PainlessParserTYPE       = 81
	PainlessParserID         = 82
	PainlessParserDOTINTEGER = 83
	PainlessParserDOTID      = 84
)

// PainlessParser rules.
const (
	PainlessParserRULE_source           = 0
	PainlessParserRULE_function         = 1
	PainlessParserRULE_parameters       = 2
	PainlessParserRULE_statement        = 3
	PainlessParserRULE_rstatement       = 4
	PainlessParserRULE_dstatement       = 5
	PainlessParserRULE_trailer          = 6
	PainlessParserRULE_block            = 7
	PainlessParserRULE_empty            = 8
	PainlessParserRULE_initializer      = 9
	PainlessParserRULE_afterthought     = 10
	PainlessParserRULE_declaration      = 11
	PainlessParserRULE_decltype         = 12
	PainlessParserRULE_declvar          = 13
	PainlessParserRULE_trap             = 14
	PainlessParserRULE_expression       = 15
	PainlessParserRULE_unary            = 16
	PainlessParserRULE_chain            = 17
	PainlessParserRULE_primary          = 18
	PainlessParserRULE_postfix          = 19
	PainlessParserRULE_postdot          = 20
	PainlessParserRULE_callinvoke       = 21
	PainlessParserRULE_fieldaccess      = 22
	PainlessParserRULE_braceaccess      = 23
	PainlessParserRULE_stdarray         = 24
	PainlessParserRULE_initializedarray = 25
	PainlessParserRULE_listinitializer  = 26
	PainlessParserRULE_mapinitializer   = 27
	PainlessParserRULE_maptoken         = 28
	PainlessParserRULE_arguments        = 29
	PainlessParserRULE_argument         = 30
	PainlessParserRULE_lambda           = 31
	PainlessParserRULE_lamtype          = 32
	PainlessParserRULE_funcref          = 33
)

// ISourceContext is an interface to support dynamic dispatch.
type ISourceContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSourceContext differentiates from other interfaces.
	IsSourceContext()
}

type SourceContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySourceContext() *SourceContext {
	var p = new(SourceContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PainlessParserRULE_source
	return p
}

func (*SourceContext) IsSourceContext() {}

func NewSourceContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SourceContext {
	var p = new(SourceContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PainlessParserRULE_source

	return p
}

func (s *SourceContext) GetParser() antlr.Parser { return s.parser }

func (s *SourceContext) EOF() antlr.TerminalNode {
	return s.GetToken(PainlessParserEOF, 0)
}

func (s *SourceContext) AllFunction() []IFunctionContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IFunctionContext)(nil)).Elem())
	var tst = make([]IFunctionContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IFunctionContext)
		}
	}

	return tst
}

func (s *SourceContext) Function(i int) IFunctionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFunctionContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IFunctionContext)
}

func (s *SourceContext) AllStatement() []IStatementContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IStatementContext)(nil)).Elem())
	var tst = make([]IStatementContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IStatementContext)
		}
	}

	return tst
}

func (s *SourceContext) Statement(i int) IStatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStatementContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IStatementContext)
}

func (s *SourceContext) Dstatement() IDstatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDstatementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDstatementContext)
}

func (s *SourceContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SourceContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SourceContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PainlessParserListener); ok {
		listenerT.EnterSource(s)
	}
}

func (s *SourceContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PainlessParserListener); ok {
		listenerT.ExitSource(s)
	}
}

func (p *PainlessParser) Source() (localctx ISourceContext) {
	localctx = NewSourceContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, PainlessParserRULE_source)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(71)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(68)
				p.Function()
			}

		}
		p.SetState(73)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 0, p.GetParserRuleContext())
	}
	p.SetState(77)
	p.GetErrorHandler().Sync(p)
	_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext())

	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(74)
				p.Statement()
			}

		}
		p.SetState(79)
		p.GetErrorHandler().Sync(p)
		_alt = p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 1, p.GetParserRuleContext())
	}
	p.SetState(81)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if (((_la-5)&-(0x1f+1)) == 0 && ((1<<uint((_la-5)))&((1<<(PainlessParserLBRACE-5))|(1<<(PainlessParserLP-5))|(1<<(PainlessParserDO-5))|(1<<(PainlessParserCONTINUE-5))|(1<<(PainlessParserBREAK-5))|(1<<(PainlessParserRETURN-5))|(1<<(PainlessParserNEW-5))|(1<<(PainlessParserTHROW-5))|(1<<(PainlessParserBOOLNOT-5))|(1<<(PainlessParserBWNOT-5))|(1<<(PainlessParserADD-5))|(1<<(PainlessParserSUB-5)))) != 0) || (((_la-58)&-(0x1f+1)) == 0 && ((1<<uint((_la-58)))&((1<<(PainlessParserINCR-58))|(1<<(PainlessParserDECR-58))|(1<<(PainlessParserOCTAL-58))|(1<<(PainlessParserHEX-58))|(1<<(PainlessParserINTEGER-58))|(1<<(PainlessParserDECIMAL-58))|(1<<(PainlessParserSTRING-58))|(1<<(PainlessParserREGEX-58))|(1<<(PainlessParserTRUE-58))|(1<<(PainlessParserFALSE-58))|(1<<(PainlessParserNULL-58))|(1<<(PainlessParserTYPE-58))|(1<<(PainlessParserID-58)))) != 0) {
		{
			p.SetState(80)
			p.Dstatement()
		}

	}
	{
		p.SetState(83)
		p.Match(PainlessParserEOF)
	}

	return localctx
}

// IFunctionContext is an interface to support dynamic dispatch.
type IFunctionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFunctionContext differentiates from other interfaces.
	IsFunctionContext()
}

type FunctionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFunctionContext() *FunctionContext {
	var p = new(FunctionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PainlessParserRULE_function
	return p
}

func (*FunctionContext) IsFunctionContext() {}

func NewFunctionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FunctionContext {
	var p = new(FunctionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PainlessParserRULE_function

	return p
}

func (s *FunctionContext) GetParser() antlr.Parser { return s.parser }

func (s *FunctionContext) Decltype() IDecltypeContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDecltypeContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDecltypeContext)
}

func (s *FunctionContext) ID() antlr.TerminalNode {
	return s.GetToken(PainlessParserID, 0)
}

func (s *FunctionContext) Parameters() IParametersContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IParametersContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IParametersContext)
}

func (s *FunctionContext) Block() IBlockContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBlockContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IBlockContext)
}

func (s *FunctionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FunctionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FunctionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PainlessParserListener); ok {
		listenerT.EnterFunction(s)
	}
}

func (s *FunctionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PainlessParserListener); ok {
		listenerT.ExitFunction(s)
	}
}

func (p *PainlessParser) Function() (localctx IFunctionContext) {
	localctx = NewFunctionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, PainlessParserRULE_function)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(85)
		p.Decltype()
	}
	{
		p.SetState(86)
		p.Match(PainlessParserID)
	}
	{
		p.SetState(87)
		p.Parameters()
	}
	{
		p.SetState(88)
		p.Block()
	}

	return localctx
}

// IParametersContext is an interface to support dynamic dispatch.
type IParametersContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsParametersContext differentiates from other interfaces.
	IsParametersContext()
}

type ParametersContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyParametersContext() *ParametersContext {
	var p = new(ParametersContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PainlessParserRULE_parameters
	return p
}

func (*ParametersContext) IsParametersContext() {}

func NewParametersContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ParametersContext {
	var p = new(ParametersContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PainlessParserRULE_parameters

	return p
}

func (s *ParametersContext) GetParser() antlr.Parser { return s.parser }

func (s *ParametersContext) LP() antlr.TerminalNode {
	return s.GetToken(PainlessParserLP, 0)
}

func (s *ParametersContext) RP() antlr.TerminalNode {
	return s.GetToken(PainlessParserRP, 0)
}

func (s *ParametersContext) AllDecltype() []IDecltypeContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IDecltypeContext)(nil)).Elem())
	var tst = make([]IDecltypeContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IDecltypeContext)
		}
	}

	return tst
}

func (s *ParametersContext) Decltype(i int) IDecltypeContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDecltypeContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IDecltypeContext)
}

func (s *ParametersContext) AllID() []antlr.TerminalNode {
	return s.GetTokens(PainlessParserID)
}

func (s *ParametersContext) ID(i int) antlr.TerminalNode {
	return s.GetToken(PainlessParserID, i)
}

func (s *ParametersContext) AllCOMMA() []antlr.TerminalNode {
	return s.GetTokens(PainlessParserCOMMA)
}

func (s *ParametersContext) COMMA(i int) antlr.TerminalNode {
	return s.GetToken(PainlessParserCOMMA, i)
}

func (s *ParametersContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ParametersContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ParametersContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PainlessParserListener); ok {
		listenerT.EnterParameters(s)
	}
}

func (s *ParametersContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PainlessParserListener); ok {
		listenerT.ExitParameters(s)
	}
}

func (p *PainlessParser) Parameters() (localctx IParametersContext) {
	localctx = NewParametersContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, PainlessParserRULE_parameters)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(90)
		p.Match(PainlessParserLP)
	}
	p.SetState(102)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == PainlessParserTYPE {
		{
			p.SetState(91)
			p.Decltype()
		}
		{
			p.SetState(92)
			p.Match(PainlessParserID)
		}
		p.SetState(99)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for _la == PainlessParserCOMMA {
			{
				p.SetState(93)
				p.Match(PainlessParserCOMMA)
			}
			{
				p.SetState(94)
				p.Decltype()
			}
			{
				p.SetState(95)
				p.Match(PainlessParserID)
			}

			p.SetState(101)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}

	}
	{
		p.SetState(104)
		p.Match(PainlessParserRP)
	}

	return localctx
}

// IStatementContext is an interface to support dynamic dispatch.
type IStatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStatementContext differentiates from other interfaces.
	IsStatementContext()
}

type StatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatementContext() *StatementContext {
	var p = new(StatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PainlessParserRULE_statement
	return p
}

func (*StatementContext) IsStatementContext() {}

func NewStatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatementContext {
	var p = new(StatementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = PainlessParserRULE_statement

	return p
}

func (s *StatementContext) GetParser() antlr.Parser { return s.parser }

func (s *StatementContext) Rstatement() IRstatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IRstatementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IRstatementContext)
}

func (s *StatementContext) Dstatement() IDstatementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDstatementContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDstatementContext)
}

func (s *StatementContext) SEMICOLON() antlr.TerminalNode {
	return s.GetToken(PainlessParserSEMICOLON, 0)
}

func (s *StatementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PainlessParserListener); ok {
		listenerT.EnterStatement(s)
	}
}

func (s *StatementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PainlessParserListener); ok {
		listenerT.ExitStatement(s)
	}
}

func (p *PainlessParser) Statement() (localctx IStatementContext) {
	localctx = NewStatementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, PainlessParserRULE_statement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(110)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case PainlessParserIF, PainlessParserWHILE, PainlessParserFOR, PainlessParserTRY:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(106)
			p.Rstatement()
		}

	case PainlessParserLBRACE, PainlessParserLP, PainlessParserDO, PainlessParserCONTINUE, PainlessParserBREAK, PainlessParserRETURN, PainlessParserNEW, PainlessParserTHROW, PainlessParserBOOLNOT, PainlessParserBWNOT, PainlessParserADD, PainlessParserSUB, PainlessParserINCR, PainlessParserDECR, PainlessParserOCTAL, PainlessParserHEX, PainlessParserINTEGER, PainlessParserDECIMAL, PainlessParserSTRING, PainlessParserREGEX, PainlessParserTRUE, PainlessParserFALSE, PainlessParserNULL, PainlessParserTYPE, PainlessParserID:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(107)
			p.Dstatement()
		}
		{
			p.SetState(108)
			p.Match(PainlessParserSEMICOLON)
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IRstatementContext is an interface to support dynamic dispatch.
type IRstatementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsRstatementContext differentiates from other interfaces.
	IsRstatementContext()
}

type RstatementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRstatementContext() *RstatementContext {
	var p = new(RstatementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = PainlessParserRULE_rstatement
	return p
}

func (*RstatementContext) IsRstatementContext() {}

func NewRstatementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RstatementContext {
	var p = new(RstatementContext)
